ugly ugly code, but working

--- a/Praktikum/1-hadoop/pom.xml
+++ b/Praktikum/1-hadoop/pom.xml
@@ -20,6 +20,11 @@
 			<scope>provided</scope>
 			<version>2.5.0-cdh5.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -31,7 +36,7 @@
 					<execution>
 						<phase>install</phase>
 						<configuration>
-							
+
 							<descriptorRefs>
 								<descriptorRef>jar-with-dependencies</descriptorRef>
 							</descriptorRefs>
