--- a/DaQL/DaQL-X-PDF/.project
+++ b/DaQL/DaQL-X-PDF/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DaQL-1-PDF</name>
+	<name>DaQL-X-PDF</name>
 	<comment></comment>
 	<projects>
 	</projects>
