upload misc files

--- a/Praktikum/3-hadoop/build.xml
+++ b/Praktikum/3-hadoop/build.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0"?>
 <project name="hadoop" basedir=".">
+	<!--
 	<property name="ssh.hostname" value="hadoop01.informatik.hs-furtwangen.de" />
 	<property name="ssh.user" value="hadoop" />
-	<property name="ssh.passwd" value="hdoopasdf" />
+	<property name="ssh.passwd" value="hdoopasdf" /> 
+	-->
+	<property name="ssh.hostname" value="192.168.0.103" />
+	<property name="ssh.user" value="cloudera" />
+	<property name="ssh.passwd" value="cloudera" />
 
 	<!-- ### Properties passed from Maven ### -->
 	<property name="version" value="${mvn.version}"/>
 	<property name="name" value="${mvn.projectname}"/>
 	<property name="extra" value=""/>
-	
+
 	<property name="jar" value="${name}-${version}${extra}.jar"/>
 	<property name="dir" value="~"/>
 
