--- a/DaQL/DaQL-5/conf/recommender101.properties
+++ b/DaQL/DaQL-5/conf/recommender101.properties
@@ -37,8 +37,8 @@ DataSplitterClass=org.recommender101.data.DefaultDataSplitter:nbFolds=5
 #org.recommender101.recommender.extensions.factorizednghbors.FactorizedNeighborhoodRecommender:lambda=0.03|gamma=0.01|iterations=100|nbFactors=50
 #org.recommender101.recommender.baseline.NearestNeighbors
 AlgorithmClasses=\
-daql.programmingtask5.UserBasedCollaborativeFiltering:CosineSimilarity=true|MinSimilarity=0.05|MinOverlap=3|MinNeighbors=3|Neighbors=25,\
-daql.programmingtask5.ItemBasedCollaborativeFiltering:CosineSimilarity=true|MinSimilarity=0.25|MinOverlap=3|MinNeighbors=3|Neighbors=25
+daql.programmingtask5.UserBasedCollaborativeFiltering:CosineSimilarity=false|MinSimilarity=0.8|MinOverlap=5|MinNeighbors=5|Neighbors=25,\
+daql.programmingtask5.ItemBasedCollaborativeFiltering:CosineSimilarity=false|MinSimilarity=0.8|MinOverlap=5|MinNeighbors=5|Neighbors=25
 
 
 ###########
