--- a/Praktikum/5-pig/pom.xml
+++ b/Praktikum/5-pig/pom.xml
@@ -15,7 +15,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.pig</groupId> 
+			<groupId>org.apache.pig</groupId>
 			<scope>provided</scope>
 			<artifactId>pig</artifactId>
 			<version>0.12.0-cdh5.3.2</version>
@@ -29,6 +29,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 	</dependencies>
 
